--- a/fr-administration-front/src/app/login/login.component.html
+++ b/fr-administration-front/src/app/login/login.component.html
@@ -1,45 +1,47 @@
-<div class="hero min-h-screen bg-base-200">
+<div class="hero h-full grow bg-base-200">
   <div class="hero-content text-center flex-col">
     <div class="max-w-md flex flex-col gap-5 items-center">
       <h1 class="text-5xl font-bold">Hello there!</h1>
-      <p class="py-1">It's nice to see you here. Would you like to log in?</p>
-      <div>
-        <div class="form-control w-full max-w-xs">
-          <label class="label">
-            <span class="label-text">What is your name?</span>
-          </label>
-          <input
-            type="text"
-            [value]="username"
-            (change)="handleChangeUsername($event)"
-            placeholder="Type here"
-            class="input input-bordered w-full max-w-xs"
-          />
-        </div>
-        <div class="form-control w-full max-w-xs">
-          <label class="label">
-            <span class="label-text">And password?</span>
-          </label>
-          <input
-            type="text"
-            [value]="password"
-            (change)="handleChangePassword($event)"
-            placeholder="Type here"
-            class="input input-bordered w-full max-w-xs"
-          />
-        </div>
-      </div>
-      <button class="btn btn-primary flex gap-5" (click)="login()">
-        Let's go!
-        <div *ngIf="state == 'loading'" class="animate-spin">
-          <svg width="32" height="32" viewBox="0 0 50 50">
-            <path
-              fill="currentColor"
-              d="M41.9 23.9c-.3-6.1-4-11.8-9.5-14.4c-6-2.7-13.3-1.6-18.3 2.6c-4.8 4-7 10.5-5.6 16.6c1.3 6 6 10.9 11.9 12.5c7.1 2 13.6-1.4 17.6-7.2c-3.6 4.8-9.1 8-15.2 6.9c-6.1-1.1-11.1-5.7-12.5-11.7c-1.5-6.4 1.5-13.1 7.2-16.4c5.9-3.4 14.2-2.1 18.1 3.7c1 1.4 1.7 3.1 2 4.8c.3 1.4.2 2.9.4 4.3c.2 1.3 1.3 3 2.8 2.1c1.3-.8 1.2-2.5 1.1-3.8c0-.4.1.7 0 0z"
+      <div *ngIf="state != 'success'" class="flex flex-col gap-5 items-center">
+        <p class="py-1">It's nice to see you here. Would you like to log in?</p>
+        <div>
+          <div class="form-control w-full max-w-xs">
+            <label class="label">
+              <span class="label-text">What is your name?</span>
+            </label>
+            <input
+              type="text"
+              [value]="username"
+              (change)="handleChangeUsername($event)"
+              placeholder="Type here"
+              class="input input-bordered w-full max-w-xs"
             />
-          </svg>
+          </div>
+          <div class="form-control w-full max-w-xs">
+            <label class="label">
+              <span class="label-text">And password?</span>
+            </label>
+            <input
+              type="text"
+              [value]="password"
+              (change)="handleChangePassword($event)"
+              placeholder="Type here"
+              class="input input-bordered w-full max-w-xs"
+            />
+          </div>
         </div>
-      </button>
+        <button class="btn btn-primary flex gap-5" (click)="login()">
+          Let's go!
+          <div *ngIf="state == 'loading'" class="animate-spin">
+            <svg width="32" height="32" viewBox="0 0 50 50">
+              <path
+                fill="currentColor"
+                d="M41.9 23.9c-.3-6.1-4-11.8-9.5-14.4c-6-2.7-13.3-1.6-18.3 2.6c-4.8 4-7 10.5-5.6 16.6c1.3 6 6 10.9 11.9 12.5c7.1 2 13.6-1.4 17.6-7.2c-3.6 4.8-9.1 8-15.2 6.9c-6.1-1.1-11.1-5.7-12.5-11.7c-1.5-6.4 1.5-13.1 7.2-16.4c5.9-3.4 14.2-2.1 18.1 3.7c1 1.4 1.7 3.1 2 4.8c.3 1.4.2 2.9.4 4.3c.2 1.3 1.3 3 2.8 2.1c1.3-.8 1.2-2.5 1.1-3.8c0-.4.1.7 0 0z"
+              />
+            </svg>
+          </div>
+        </button>
+      </div>
     </div>
     <div *ngIf="state == 'success'">
       <div class="alert alert-success shadow-lg">
@@ -57,7 +59,7 @@
               d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
             />
           </svg>
-          <span>You are now connected! Hooray!</span>
+          <span>You are connected! Hooray!</span>
         </div>
       </div>
     </div>
