--- a/fr-administration-front/src/app/login/login.component.html
+++ b/fr-administration-front/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <form (ngSubmit)="login()" [formGroup]="form">
     <mat-form-field appearance="fill">
         <mat-label>Username</mat-label>
-        <input matError type="text" matInput formControlName="username">
+        <input type="text" matInput formControlName="username">
     </mat-form-field>
     <mat-form-field appearance="fill">
         <mat-label>Password</mat-label>
