--- a/fr-administration-front/src/app/nav/nav.component.html
+++ b/fr-administration-front/src/app/nav/nav.component.html
@@ -1,1 +1,27 @@
-<p>nav works!</p>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">WM Project</a>
+  
+  
+        <div
+            class="collapse navbar-collapse"
+            id="navbarSupportedContent"
+            mdbCollapse
+            >
+
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" routerLinkActive="/" href="#" routerLink="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLinkActive="/users" href="#" routerLink="/users">Users</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <button class="btn btn-secondary" (click)="logout()">Logout</button>
+        </div>
+    </div>
+  </nav>
+  <!-- Navbar -->
