--- a/fr-administration-front/src/app/login/login.component.html
+++ b/fr-administration-front/src/app/login/login.component.html
@@ -10,4 +10,5 @@
     <mat-error *ngIf="loginError">Username or password incorrect</mat-error>
 
     <button mat-raised-button color="primary" type="submit">Login</button>
+    <button mat-raised-button color="secondary" routerLink="/register">Register</button>
 </form>
