FIX login front

--- a/fr-administration-front/src/app/login/login.component.html
+++ b/fr-administration-front/src/app/login/login.component.html
@@ -191,7 +191,7 @@
         <div>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="stroke-current flex-shrink-0 h-6 w-6 buttonClose"
+            class="stroke-current flex-shrink-0 h-6 w-6 cursor-pointer"
             fill="none"
             viewBox="0 0 24 24"
             (click)="closeErrorMessage()"
