--- a/fr-administration-front/src/app/app.component.html
+++ b/fr-administration-front/src/app/app.component.html
@@ -24,6 +24,7 @@
         >
           <li><a href="/">Home</a></li>
           <li><a href="/users">Users list</a></li>
+          <li><a href="/associations">Associations list</a></li>
         </ul>
       </div>
     </div>
