--- a/fr-administration-front/src/app/app.component.html
+++ b/fr-administration-front/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div data-theme="bumblebee" class="h-full min-h-screen flex flex-col">
-  <div class="navbar bg-base-100 sticky top-0">
+  <div class="navbar bg-base-100 top-0">
     <div class="navbar-start">
       <div class="dropdown">
         <label tabindex="0" class="btn btn-ghost btn-circle">
@@ -50,5 +50,8 @@
       </button>
     </div>
   </div>
-  <router-outlet></router-outlet>
+  <div class="overflow-y-auto h-full">
+    <router-outlet></router-outlet>
+
+  </div>
 </div>
