feat: add success message

--- a/fr-administration-front/src/app/login/login.component.html
+++ b/fr-administration-front/src/app/login/login.component.html
@@ -180,7 +180,7 @@
               d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
             />
           </svg>
-          <span>You are connected! Hooray!</span>
+          <span>{{ successMessage }}</span>
         </div>
       </div>
     </div>
@@ -203,7 +203,7 @@
               d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"
             />
           </svg>
-          <span>{{errorMessage}}</span>
+          <span>{{ errorMessage }}</span>
         </div>
       </div>
     </div>
