--- a/fr-administration-front/src/app/associations-list/associations-list.component.html
+++ b/fr-administration-front/src/app/associations-list/associations-list.component.html
@@ -21,7 +21,7 @@
           <td>{{ membersToString(asso) }}</td>
           <td>
             <button mat-icon-button aria-label="about" (click)="show(asso)">
-              <mat-icon>information</mat-icon>
+              <mat-icon>visibility</mat-icon>
             </button>
             <button mat-icon-button aria-label="delete" (click)="delete(asso)">
               <mat-icon>delete</mat-icon>
