--- a/fr-administration-front/src/app/users-list/users-list.component.html
+++ b/fr-administration-front/src/app/users-list/users-list.component.html
@@ -19,7 +19,11 @@
           <td>{{ user.firstname }}</td>
           <td>{{ user.age }}</td>
           <td class="flex items-center">
-            <label [for]="user.id" class="cursor-pointer h-10 w-10 flex items-center justify-center"><mat-icon>information</mat-icon></label>
+            <label
+              [for]="user.id"
+              class="cursor-pointer h-10 w-10 flex items-center justify-center"
+              ><mat-icon>visibility</mat-icon></label
+            >
             <input type="checkbox" [id]="user.id" class="modal-toggle" />
             <div class="modal">
               <div class="modal-box relative">
@@ -28,77 +32,11 @@
                   class="btn btn-sm btn-circle absolute right-2 top-2"
                   >✕</label
                 >
-                <div class="flex flex-col gap-3">
-                  <div class="flex flex-col sm:flex-row gap-5 pb-5">
-                    <div class="avatar sm:w-fit w-full flex justify-center p-1">
-                      <div
-                        class="w-24 rounded-full ring bg-base-100 ring-offset-base-100 ring-offset-2"
-                      >
-                        <svg
-                          width="32"
-                          height="32"
-                          viewBox="0 0 24 24"
-                          class="h-full w-full translate-y-2"
-                        >
-                          <path
-                            fill="currentColor"
-                            d="M7.39 16.539a8 8 0 1 1 9.221 0l2.083 4.76a.5.5 0 0 1-.459.701H5.765a.5.5 0 0 1-.459-.7l2.083-4.761zm.729-5.569a4.002 4.002 0 0 0 7.762 0l-1.94-.485a2 2 0 0 1-3.882 0l-1.94.485z"
-                          />
-                        </svg>
-                      </div>
-                    </div>
-                    <div
-                      class="flex flex-col items-center justify-center -space-y-1 font-semibold"
-                    >
-                      <div class="form-control w-full max-w-xs">
-                        <input
-                          type="text"
-                          placeholder="First Name"
-                          [value]="user.firstname"
-                          class="input input-ghost w-full text-center sm:text-start max-w-xs text-2xl"
-                          readonly
-                        />
-                      </div>
-                      <div class="form-control w-full max-w-xs">
-                        <input
-                          type="text"
-                          placeholder="Last Name"
-                          [value]="user.lastname"
-                          class="input input-ghost w-full text-center sm:text-start max-w-xs text-2xl"
-                          readonly
-                        />
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-control w-full max-w-xs -space-y-1 relative">
-                    <label class="label z-10 opacity-50 font-semibold">
-                      <span class="label-text px-2">Age</span>
-                    </label>
-                    <input
-                      type="number"
-                      placeholder="Type here"
-                      [value]="user.age"
-                      class="input input-ghost input-sm w-full max-w-xs text-lg"
-                      readonly
-                    />
-                  </div>
-                  <div class="form-control w-full max-w-xs -space-y-1 relative">
-                    <label class="label z-10 opacity-50 font-semibold">
-                      <span class="label-text px-2">Email</span>
-                    </label>
-                    <input
-                      type="text"
-                      [value]="user.email"
-                      placeholder="Type here"
-                      class="input input-ghost input-sm w-full max-w-xs text-lg"
-                      readonly
-                    />
-                  </div>
-                </div>
+                <app-user-card [user]="user"></app-user-card>
               </div>
             </div>
             <button
-            class="h-10 w-10 flex items-center justify-center"
+              class="h-10 w-10 flex items-center justify-center"
               aria-label="delete"
               (click)="deleteUser(user.id)"
             >
