--- a/fr-administration-front/src/app/association-info/association-info.component.html
+++ b/fr-administration-front/src/app/association-info/association-info.component.html
@@ -37,7 +37,7 @@
       <tr *ngFor="let member of association.members">
         <td>{{ member.email }}</td>
         <td>{{ member.firstname }} {{ member.name }}</td>
-        <td>
+        <td class="flex">
           <label
             [for]="member.id"
             class="cursor-pointer h-10 w-10 flex items-center justify-center"
