feat: simplify nav bar

--- a/fr-administration-front/src/app/app.component.html
+++ b/fr-administration-front/src/app/app.component.html
@@ -15,8 +15,8 @@
           class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52"
         >
           <li><a href="/">Home</a></li>
-          <li><a href="/users">Users list</a></li>
-          <li><a href="/associations">Associations list</a></li>
+          <li><a href="/users">Users</a></li>
+          <li><a href="/associations">Associations</a></li>
         </ul>
       </div>
     </div>
