--- a/fr-administration-front/src/app/users-list/users-list.component.html
+++ b/fr-administration-front/src/app/users-list/users-list.component.html
@@ -1,11 +1,16 @@
 <div class="h-full bg-base-200 p-10 flex flex-col gap-5">
   <h1 class="text-3xl font-semibold opacity-40">Users list</h1>
+  <form [formGroup]="search" (ngSubmit)="searchUsers()" class="flex gap-3">
+    <input type="text" class="input w-full max-w-xs" formControlName="name" placeholder="Search">
+    <button class="btn btn-primary" type="submit">Search</button>
+  </form>
   <div class="overflow-x-auto">
     <table class="table w-full">
       <!-- head -->
       <thead>
         <tr class="[&>th]:bg-secondary">
           <th></th>
+          <th>Email</th>
           <th>Lastname</th>
           <th>Firstname</th>
           <th>Age</th>
@@ -15,6 +20,7 @@
       <tbody>
         <tr *ngFor="let user of users">
           <td class="font-bold">{{ user.id }}</td>
+          <td>{{ user.email }}</td>
           <td>{{ user.lastname }}</td>
           <td>{{ user.firstname }}</td>
           <td>{{ user.age }}</td>
