--- a/fr-administration-front/src/app/association-info/association-info.component.html
+++ b/fr-administration-front/src/app/association-info/association-info.component.html
@@ -21,7 +21,7 @@
       Submit
     </button>
   </h1>
-  <div class="text-3xl font-semibold opacity-40">Members</div>
+  <h1 class="text-3xl font-semibold opacity-40">Members</h1>
   <table class="table">
     <div *ngIf="association.members.length == 0" class="opacity-50 italic py-3">
       No members
@@ -88,6 +88,62 @@
       Add member
     </button>
   </form>
+  <div class="flex gap-5 items-center"><h1 class="text-3xl font-semibold opacity-40">Minutes</h1><label for="newMinute" class="btn">Create</label></div>
+
+  <div class="flex flex-wrap gap-3">
+    <div class="flex-auto card w-96 bg-base-100 shadow-xl" *ngFor="let min of association.minutes">
+      <div class="card-body">
+        <div class="flex justify-between">
+          <h2 class="card-title">{{min.date}}</h2>
+          <button class="btn btn-square btn-outline" (click)="deleteMinute(min)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </div>
+        <p>
+          {{min.content}}
+        </p>
+        <ul>
+          <li *ngFor="let u of min.users">{{u.firstname}} {{u.lastname}}</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <!-- Put this part before </body> tag -->
+  <input type="checkbox" id="newMinute" class="modal-toggle" [formControl]="newMinuteModal" />
+  <div class="modal">
+    <div class="modal-box">
+      <h3 class="font-bold text-lg">Minute creation</h3>
+      <form [formGroup]="newMinute" (ngSubmit)="createMinute()">
+        <div class="form-control">
+          <label class="label">
+            <span class="label-text">Name</span>
+          </label>
+          <input type="date" formControlName="date" placeholder="Type here" class="input input-bordered w-full max-w-xs" />
+        </div>
+        <div class="form-control">
+          <label class="label">
+            <span class="label-text">Voters</span>
+          </label>
+          <select name="voters" formControlName="voters" multiple>
+            <option *ngFor="let u of association.members" [value]="u.id">{{u.role}} {{u.firstname}} {{u.name}}</option>
+          </select>
+        </div>
+        <div class="form-control">
+          <label class="label">
+            <span class="label-text">Content</span>
+          </label>
+          <textarea class="textarea textarea-bordered h-24" placeholder="" formControlName="content"></textarea>
+        </div>
+
+        <div class="flex flex-row-reverse">
+          <button type="submit" class="btn btn-primary">Submit</button>
+          <label for="newMinute" class="btn btn-ghost">Cancel</label>
+        </div>
+      </form>
+    </div>
+  </div>
+
   <div *ngIf="error">
     <div
       class="alert alert-error shadow-lg absolute bottom-0 w-fit left-0 m-10"
